# flowledger

./: README.md  app.py  pyproject.toml  requirements.txt
data/: flowledger_invoices_demo_large.csv  flowledger_invoices_sample.csv  flowledger_payments_demo_large.csv  flowledger_payments_sample.csv
docs/: flowledger_spec.md
src/flowledger/: __init__.py  cli.py  csv_io.py  engine.py  models.py  workbook.py
tests/: test_flowledger.py
