[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "dpvo-course-rebuild"
version = "0.1.0"
description = "Course-friendly rebuild of Deep Patch Visual Odometry concepts."
requires-python = ">=3.10"
dependencies = [
  "numpy>=2.0",
  "opencv-python>=4.8",
  "openpyxl>=3.1",
  "streamlit>=1.46",
]

[project.scripts]
flowledger = "flowledger.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
